--- a/frontend/src/styles/commentcard.scss
+++ b/frontend/src/styles/commentcard.scss
@@ -45,6 +45,7 @@ form {
       padding: 0.5rem;
       background-color: transparent;
       border: 1px solid #efefef;
+      color: #000;
     }
   }
 }
